# AutoGuard-AI-Real-Time-Autonomous-Vehicle-Safety-Geofencing-Platform

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dailylog.md  Dockerfile  File Structure  LICENSE  Makefile  README.md  docker-compose.yml  metrics.py  requirements-ci.txt  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: ci.yml  daily_benchmarks.yml  demo_app.py  deploy.yml  docker-publish.yml  release.yml  sbom.yml  sonar.yml  trivy.yml  update-metrics.yml
agents/: guards.py  state.py  supervisor.py
api/: geofence.py  grpc_server.py  inference.proto  main.py
apps/dashboard/: Dockerfile  streamlit_app.py  ws_server.py
benchmarks/: inference_benchmark.py
cuda/: binding.cpp  geofence_kernel.cu
dashboard/: streamlit_app.py  ws_server.py
docker/: Dockerfile.api
docs/: architecture.md  development.md  structure.md
examples/: geofence_demo.py
fatigue_detection/: fatigue_model.py
geofence/: google_maps_geofence.py
infra/: ab_testing.py  main.tf  redis_cache.py
infra/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  (+1 more)
k8s/: deployment.yaml
libs/risk-engine-cpp/: CMakeLists.txt
mlops/: prometheus_metrics.py
models/: ear_metric.py  fatigue_cnn.py
perception/: transformer_model.py
pipelines/: drift_detection.py
risk_engine_cpp/: risk_engine.cpp
rl_simulation/: train_rl.py
scripts/: generate_data.py  generate_metrics_table.py
streaming/: kafka_consumer.py
tests/: test_api.py  test_geofence_unit.py  test_smoke.py
(+38 files in other folders)
